--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide": "^0.546.0",
     "lucide-react": "^0.545.0",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
